--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -10,25 +10,31 @@ body {
     font-size: 16px;
     line-height: 1.5;
     color: #333;
-    background-color: #fff;
+    background: linear-gradient(45deg, #c7a9c4,#fda3b4,#ffab7d,#f5cd41);
+
 }
 
 .app {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100vh;
+    padding: 20px;
 }
 
 .countdown-container {
-    width: 100%;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     row-gap: 20px;
     column-gap: 20px;
+    background-color: black;
+    border-radius: 10px;
+    padding: 30px;
+    max-width: 800px;
+    width: 100%;
 }
 
 .counter-container {
@@ -36,8 +42,38 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: white;
+}
+
+.counter-container h3 {
+    font-size: 8em;
+    font-weight: 300;
 }
 
 .counter-container h2 {
-    text-transform: capitalize;
+    font-size: 1em;
+    text-transform: uppercase;
+    font-weight: 200;
+    color: #b9b9b9;
+}
+
+.countdown-separator {
+    font-size: 4em;
+    position: relative;
+    top: -20px;
+    color: white;
+}
+
+@media (max-width: 800px) {
+    .countdown-container {
+        flex-direction: column;
+        max-width: 200px;
+    }
+
+    .counter-container h3 {
+        font-size: 5em;
+    }
+    .countdown-separator {
+        display: none;
+    }
 }
